src/main/java/com/example/resy/data/error/ValidationException.java
package com.example.resy.data.error;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) {
        super(message);
    }
}
